# DCNv4

./: make_env.sh  setup_env.sh  test_dataset.py
DCNv4_op/DCNv4/functions/: dcnv4_func.py
DCNv4_op/src/DCNv4Plugin/: CMakeLists.txt  build_libtorch.sh  build_torch_cuda.sh  dcnv4_im2col_cuda.cuh  dcnv4_plugin.cpp  dcnv4_plugin.h  install_buidl_deps.sh  plugin.cpp
DCNv4_op/src/cuda/: dcnv4_col2im_cuda.cuh  dcnv4_im2col_cuda.cuh
detection/: cascade_internimage_l_fpn_3x_coco.p  coco_instance.py  export_onnx.py  setup_env.sh  train.py  tt.py
detection/configs/_base_/: default_runtime.py
detection/configs/_base_/datasets/: coco_instance.py
detection/configs/_base_/models/: cascade_mask_rcnn_convnext_fpn.py  mask_rcnn_convnext_fpn.py
detection/configs/coco/: cascade_flash_intern_image_l_fpn_1x_coco.py  cascade_flash_intern_image_l_fpn_3x_coco.py  dino_4scale_flash_internimage_b_1x_coco.py  dino_4scale_flash_internimage_l_1x_coco.py  dino_4scale_flash_internimage_s_1x_coco.py  dino_4scale_flash_internimage_t_1x_coco.py
segmentation/mmseg_custom/models/decode_heads/: mask2former_head.py
